--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Arial;
+	background-color: #BF3030;
 }
 
 ul, li, h2, input {
@@ -27,7 +28,8 @@ h2 {
 	width: 575px;
 	margin: 25px auto;
 	text-align: center;
-	border: 1px solid black;
+	border: 2px solid #FF4040;
+	background-color: #A60000;
 }
 
 #marquee h1 {
@@ -48,7 +50,7 @@ h2 {
 #cards div {
 	width: 100px;
 	height: 100px;
-	border: 1px solid black;
+	border: 1px solid #FF4040;
 	float: left;
 	margin: 5px;
 	border-radius: 5px;
@@ -61,8 +63,14 @@ h2 {
 	display: table-cell;
 }
 
+#score-board {
+	width: 100%;
+	text-align: center;
+	clear: both;
+}
+
 .hidden_card {
-	background-color: #9900FF;
+	background-color: #A60000;
 }
 
 .ui-effects-transfer {
